# NBA-Tutorials

./: .gitignore  README.md  pyproject.toml
data/: NBA_teams_database.csv
sos_adjusted_ratings/: README.md  how_to_adjust_nba_team_ratings_for_sos.ipynb
sos_adjusted_ratings/data/: NBA_BoxScores_Adv_2023.csv
three_pt_shooting_trends/: README.md  plotting_three_pt_shooting_trends.ipynb
