[tool.poetry]
name = "nba-tutorials"
version = "0.1.0"
description = "NBA Analytics Tutorials"
authors = ["Sravan Pannala <57152030+sravanpannala@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.27.1"
seaborn = "^0.13.0"
plotnine = "^0.12.4"
scikit-learn = "^1.3.2"
scikit-misc = "^0.3.1"
tqdm = "^4.66.1"
dill = "^0.3.7"
pyarrow = "^14.0.1"
great-tables = "^0.1.3"
zstandard = "^0.22.0"
nba-api = "^1.4.1"
pbpstats = "^1.3.10"
tenacity = "^8.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
